<resources>
    <string name="app_name">A12-BTver03</string>
    <string name="hello_world">Hello World!</string>
    <string name="button_click">Hello Android 426</string>
    <string name="first_menu">Request BT Permissions</string>
    <string name="second_menu">Locate In Paired BT List</string>
    <string name="third_menu">Connect To EV3</string>
    <string name="fourth_menu">Move Motor</string>
    <string name="fifth_menu">Play Tone</string>
    <string name="sixth_menu">Disconnect From EV3</string>
    <string name="menu_first">1. Grant Permission</string>

    <string name="connect_button_text">Connect</string>
    <string name="close_button_text">Close</string>
    <string name="drive_button_text">Drive</string>
    <string name="title">NXT Device Bluetooth Connection</string>
    <string name="tilt_on">Tilt ON</string>
    <string name="tilt_off">Tilt OFF</string>
    <string name="battery_level">Battery Level</string>
    <string name="lego_device_text">Lego Device</string>
    <string name="connection_text">Not Connected</string>
    <string name="secondary_textview_initial_text">BLUETOOTH_CONNECT NOT granted</string>

</resources>